page no longer looks like ass on mobile

--- a/src/containers/landing/Landing.css
+++ b/src/containers/landing/Landing.css
@@ -35,6 +35,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .navBar a {
@@ -73,18 +74,24 @@
 }
 
 /* HERO STYLES */
-.hero {
+.heroContainer {
     display: flex;
-    flex-direction: row;
-    grid-area: Hero;
-    justify-content: space-around;
-    align-items: center;
-    height: 500px;
-    padding-left: 4rem;
-    padding-right: 4rem;
+    justify-content: center;
+
+    height: fit-content;
     background-color: #fddeb4;
     color: #414141;
     clip-path: ellipse(120% 100% at 50% 0%);
+}
+.hero {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+
+    width: 85vw;
+    max-width: 1400px;
 }
 
 .heroText {
@@ -93,6 +100,12 @@
     justify-content: space-between;
     width: 375px;
     height: 400px;
+}
+.heroImage {
+    margin-bottom: 5rem;
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
 }
 
 .heroText h2 {
@@ -118,6 +131,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 
     margin: 2rem auto;
     width: 85vw;
@@ -139,6 +153,9 @@
 .whatImg {
     width: 408px;
     height: 408px;
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
 }
 .whatText {
     width: 400px;
@@ -149,6 +166,7 @@
     display: flex;
     padding: 2rem;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .featureCard {
     display: flex;
@@ -165,6 +183,9 @@
     margin-right: 1rem;
     height: 120px;
     width: 120px;
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
 }
 .featureCard figure figCaption {
     /* Header 4 */
@@ -186,24 +207,31 @@
     width: 936px;
     height: 432px;
     margin: 2rem auto;
+
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
 }
 
 /* HOW SECTION STYLES */
+.howContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .how {
     display: flex;
     flex-direction: row;
-    margin-left: 3rem;
-    margin-right: 3rem;
-    max-width: 1075px;
+    flex-wrap: wrap;
+    max-width: 80vw;
 }
 .how img {
     /* Rectangle 7 */
-    width: 560px;
-    height: 560px;
-    margin: 2rem;
-
-    background: #c4c4c4;
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
     border-radius: 16px;
+    margin: 2rem;
 }
 
 .howText {
@@ -213,8 +241,8 @@
 }
 .howText h3 {
     /* Step 1: Select a tool to use. */
-    width: 434px;
-    height: 47px;
+    max-width: 434px;
+    max-height: 47px;
 
     /* Header 3 */
     font-family: Futura;
@@ -230,8 +258,8 @@
 }
 .howText p {
     /* Choose from a variety of brushes, a rainbow of hues, a collection of stamps, and a panorama of backgrounds. Situated in the tools dock below, it’s as simple as tapping the one you want. */
-    width: 484.59px;
-    height: 106.97px;
+    max-width: 484.59px;
+    max-height: 106.97px;
 
     /* Body */
     font-family: Domine;
@@ -250,6 +278,7 @@
 .team {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     margin: 1rem 0 3rem;
 }
 
@@ -257,10 +286,20 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     width: 370px;
 }
 .teamCard img {
     align-items: center;
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
+}
+.teamContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 370px;
 }
 
 .name {
